atualizaçao texto, footer, header

--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -21,8 +21,9 @@
                     class="logo"></a>
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
-                <a href="#" target="_blank" class="temas">Sobre Nós</a>
+                <a href="../sobreProjeto/index.html" class="temas">Sobre Nós</a>
                 <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
+                <a href="../valores/index.html" class="temas">Valores</a>
             </div>
         </header>
     </div>
@@ -43,29 +44,12 @@
         </div>
 
         <div class="localizaçao">
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur provident facilis nobis
-                quaerat autem ad
-                corrupti molestiae quod impedit explicabo praesentiu esse.</p>
-            <p class="texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut facilis vero laboriosam?
-                Ipsum, repudiandae
-                praesentium minima iure dolorum soluta. Id quos optio, corrupti laborum numquam nam? Molestias voluptas
-                nulla accusamus.</p>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
-                architecto
-                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
-                ratione, cupiditate atque?</p>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
-                architecto
-                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
-                ratione, cupiditate atque?</p>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
-                architecto
-                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
-                ratione, cupiditate atque?</p>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam possimus soluta, assumenda
-                architecto
-                molestiae impedit aliquid, sint hic earum excepturi nesciunt ullam sed molestias dolor fuga labore
-                ratione, cupiditate atque?</p>
+            <p class="texto">📍Av. João Dias, 2046 - Santo Amaro, São Paulo - SP, 04724-003</p>
+            <p class="texto">📍Av. Guido Caloi, 2221 - Santo Amaro, São Paulo - SP, 04753-100</p>
+            <p class="texto">📍Av. Brig. Faria Lima, 846 - Pinheiros, São Paulo - SP, 05426-200</p>
+            <p class="texto">📍Praça da Luz, 1, Luz, São Paulo - SP</p>
+            <p class="texto">📍Praça da Sé - Sé, São Paulo - SP, 01310-200</p>
+            <p class="texto">📍R. Bela Cintra, 1032 - Consolação, São Paulo - SP, 01415-002</p>
         </div>
 
         <section>
@@ -114,19 +98,23 @@
     </main>
 
     <footer class="rodape">
-        <p>Desenvolvido e projetado por Bruno Fernande Silva</p>
+        <div class="org-txt">
+            <p>&copy; 2025 Dow Brasil. Todos os direitos reservados.</p>
+        </div>
         <div class="rodape__link">
             <p>Nos siga em nossas redes sociais:</p>
-            <a href="https://www.linkedin.com/company/dow-chemical/">
-                <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
-            <a href="https://x.com/DowNewsroom">
-                <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
-            <a href="https://www.facebook.com/dow/">
-                <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a>
-            <a href="https://www.youtube.com/dowchemicalcompany">
-                <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a>
-            <a href="https://www.instagram.com/dow_official">
-                <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
+            <div class="org-link">
+                <a href="https://www.linkedin.com/company/dow-chemical/">
+                    <img src="../../../public/assets/image/linkedin.svg" alt="logo linkedin"></a>
+                <a href="https://x.com/DowNewsroom">
+                    <img src="../../../public/assets/image/twitterx.svg" alt="logo X"></a>
+                <a href="https://www.facebook.com/dow/">
+                    <img src="../../../public/assets/image/facebook.svg" alt="logo Facebook"></a>
+                <a href="https://www.youtube.com/dowchemicalcompany">
+                    <img src="../../../public/assets/image/youtube.svg" alt="Logo Youtube"></a>
+                <a href="https://www.instagram.com/dow_official">
+                    <img src="../../../public/assets/image/instagram.svg" alt="Logo instagram"></a>
+            </div>
         </div>
     </footer>
 </body>
