--- a/site/src/paginas/localizacaoMaquinas/index.html
+++ b/site/src/paginas/localizacaoMaquinas/index.html
@@ -20,7 +20,7 @@
             <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow"
                     class="logo"></a>
             <div class="tema">
-                <a href="index.html" class="temas">Home</a>
+                <a href="../../paginas/home/index.html" class="temas">Home</a>
                 <a href="../sobreProjeto/index.html" class="temas">Sobre Nós</a>
                 <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
                 <a href="../valores/index.html" class="temas">Valores</a>
