--- a/site/src/paginas/ODS/index.html
+++ b/site/src/paginas/ODS/index.html
@@ -45,7 +45,7 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #fff;
+      background-color: #F8F4E1;
       color: #333;
       scroll-behavior: smooth;
     }
