Alteração de imagem

--- a/site/src/paginas/sobreProjeto/index.html
+++ b/site/src/paginas/sobreProjeto/index.html
@@ -58,7 +58,7 @@
     <div class="reciclagem-fim">
         <div class="reciclagem-fim__texto">
             <p>A longo prazo, espera-se a formação de uma comunidade mais responsável, com hábitos sustentáveis incorporados à rotina. Os benefícios são: redução significativa de resíduos descartados de forma inadequada além do impacto direto na preservação do meio ambiente</p>
-        <img src="../../../public/assets/image/pessoas.png">
+        <img class="img__reciclagem" src="../../../public/assets/image/Reciclagem 2.svg">
     </div>
     </div>
 
