--- a/site/src/paginas/sobreProjeto/index.html
+++ b/site/src/paginas/sobreProjeto/index.html
@@ -43,6 +43,19 @@
         <p class="reciclagem-texto">Para facilitar a adesão e ampliar o alcance do projeto, os pontos de coleta serão instalados em espaços públicos estratégicos, como praças, escolas, centros comunitários e terminais de transporte. Também está previsto o desenvolvimento de um aplicativo móvel, que permitirá acompanhar entregas, consultar saldos, trocar pontos por recompensas e até participar de desafios e campanhas educativas — gamificando o processo de reciclagem</p>
         <p class="reciclagem-texto">A longo prazo, espera-se a formação de uma comunidade mais responsável e participativa, com hábitos sustentáveis incorporados ao dia a dia. O projeto também visa reduzir significativamente o volume de resíduos descartados de forma inadequada, contribuindo diretamente para a preservação do meio ambiente e a melhoria da qualidade de vida urbana.</p>
         <div class="subtitulo__reciclagem">
+            <h2>ISO 26000 e a Reciclagem: Responsabilidade Social na Prática</h2>
+             <p class="reciclagem-texto">A norma ISO 26000 é uma diretriz internacional que orienta organizações sobre responsabilidade social, ajudando-as a atuar de forma ética e sustentável. No contexto da reciclagem, essa norma desempenha um papel essencial, pois promove práticas que minimizam impactos ambientais e contribuem para uma economia circular. A ISO 26000 incentiva empresas e instituições a adotarem ações como:</p>
+             <div class="reciclagem__pontos2">
+                <ul>
+                    <li>Gestão responsável de resíduos – Redução, reutilização e reciclagem de materiais para evitar desperdícios e a contaminação ambiental.</li>
+                    <li>Uso sustentável de recursos – Priorização de insumos recicláveis e biodegradáveis em processos produtivos.</li>
+                    <li>Educação e conscientização – Engajamento de colaboradores e da sociedade na importância da reciclagem para a preservação do meio ambiente.</li>
+                    <li>Parcerias e inovação – Colaboração com cooperativas, indústrias e governos para melhorar processos e criar soluções sustentáveis.</li>
+                </ul>
+             </div>
+             <p class="reciclagem-texto">Implementar a ISO 26000 no setor de reciclagem fortalece a responsabilidade social corporativa e impulsiona ações mais conscientes para um futuro sustentável. Ao seguir essas diretrizes, organizações contribuem para a conservação dos recursos naturais e para a redução da poluição, promovendo um impacto positivo na sociedade e no planeta.</p>
+        </div>
+        <div class="subtitulo__reciclagem">
             <h2>Entre os benefícios esperados estão: </h2>
             <div class="reciclagem__pontos">
                 <ul>
