--- a/site/src/paginas/sobreProjeto/index.html
+++ b/site/src/paginas/sobreProjeto/index.html
@@ -45,7 +45,7 @@
         <div class="subtitulo__reciclagem">
             <h2>ISO 26000 e a Reciclagem: Responsabilidade Social na Prática</h2>
              <p class="reciclagem-texto">A norma ISO 26000 é uma diretriz internacional que orienta organizações sobre responsabilidade social, ajudando-as a atuar de forma ética e sustentável. No contexto da reciclagem, essa norma desempenha um papel essencial, pois promove práticas que minimizam impactos ambientais e contribuem para uma economia circular. A ISO 26000 incentiva empresas e instituições a adotarem ações como:</p>
-             <div class="reciclagem__pontos2">
+             <div class="reciclagem__pontos">
                 <ul>
                     <li>Gestão responsável de resíduos – Redução, reutilização e reciclagem de materiais para evitar desperdícios e a contaminação ambiental.</li>
                     <li>Uso sustentável de recursos – Priorização de insumos recicláveis e biodegradáveis em processos produtivos.</li>
@@ -53,7 +53,6 @@
                     <li>Parcerias e inovação – Colaboração com cooperativas, indústrias e governos para melhorar processos e criar soluções sustentáveis.</li>
                 </ul>
              </div>
-             <p class="reciclagem-texto">Implementar a ISO 26000 no setor de reciclagem fortalece a responsabilidade social corporativa e impulsiona ações mais conscientes para um futuro sustentável. Ao seguir essas diretrizes, organizações contribuem para a conservação dos recursos naturais e para a redução da poluição, promovendo um impacto positivo na sociedade e no planeta.</p>
         </div>
         <div class="subtitulo__reciclagem">
             <h2>Entre os benefícios esperados estão: </h2>
