--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -28,8 +28,8 @@
                     <h2 class="titulo__subtitulo">Número 1 no mercado de tecnologia sustetável</h2>
                     <p class="titulo__subtitulo__texto">A Dow combina química, biologia e física para criar tecnologias inovadoras que contribuem para o progresso da humanidade. Fornecendo visão e inovação para os mais diferentes mercados em todo o mundo com soluções essenciais para o progresso humano.</p>
                     <div class="projetos">
-                        <a class="projeto__btn" href="../../" >Impactos Ambientais</a>
-                        <a class="projeto__btn" href="../../../src/paginas/sobreProjeto/index.html">Projeto de Reciclagem</a>
+                        <a class="projeto__btn" href="../impactos/pp.html" >Impactos Ambientais</a>
+                        <a class="projeto__btn" href="../sobreProjeto/index.html">Projeto de Reciclagem</a>
                     </div>
                 </div>
             </div>
