--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -16,7 +16,6 @@
                 <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo"></a>
             <div class="tema">
                 <a href="index.html" class="temas">Home</a>
-                <a href="#" target="_blank" class="temas">Sobre Nós</a>
                 <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
             </div>
         </header>
@@ -35,8 +34,7 @@
             </div>
             <div class="container__quemsomos">
                 <h1>Quem Somos?</h1>
-                <p>Ajudamos a proporcionar um futuro sustentável para o mundo por meio da nossa expertise em ciência dos materiais e da colaboração com parceiros. Saiba mais sobre nossa ambição, nossa equipe e nossas parcerias.</p>
-                <a class="container__saibamais" href="" target="_blank">SAIBA MAIS</a>
+                <p>Ajudamos a proporcionar um futuro sustentável para o mundo por meio da nossa expertise em ciência dos materiais e da colaboração com parceiros.</p>
             </div>
             <div class="container__sustentabilidade">
                 <h1>SUSTENTABILIDADE</h1>
