--- a/site/src/paginas/impactos/pp.html
+++ b/site/src/paginas/impactos/pp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,12 +16,13 @@
 
 <div>
     <header class="cabecalho">
-        <a href="../home/index.html"><img src="html.png.png" alt="Logo Dow"
+        <a href="../../paginas/home/index.html"><img src="html.png.png" alt="Logo Dow"
                 class="logo"></a>
         <div class="tema">
-            <a href="../home/index.html" class="temas">Home</a>
-            <a href="#" class="temas">Sobre Nós</a>
-            <a href="../ODS/index.html" class="temas">Sobre a ODS</a>
+            <a href="index.html" class="temas">Home</a>
+            <a href="../sobreProjeto/index.html" class="temas">Sobre Nós</a>
+            <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
+            <a href="../valores/index.html" class="temas">Valores</a>
         </div>
     </header>
 </div>
