--- a/site/src/paginas/valores/index.html
+++ b/site/src/paginas/valores/index.html
@@ -13,9 +13,11 @@
         <header class="cabecalho">
             <a href="../../paginas/home/index.html"><img src="../../../public/assets/image/Logo_red.svg" alt="Logo Dow" class="logo"></a>
             <div class="tema">
-                <a href="../../../src/paginas/home/index.html" class="temas">Home</a>
-                <a href="#" target="_blank" class="temas">Sobre Nós</a>
-                <a href="#" class="temas">Sobre a ODS</a>
+            <a href="../home/index.html" class="temas">Home</a>
+            <a href="../../../src/paginas/localizacaoMaquinas/index.html" class="temas">Localização das Máquinas</a>
+            <a href="../../../src/paginas/ODS/index.html" class="temas">Sobre a ODS</a>
+            <a href="../../../src/paginas/sobreProjeto/index.html" class="temas">Sobre o Projeto</a>
+            <a href="../../../src/paginas/valores/index.html" class="temas">Custos</a>
             </div>
         </header>
     </div>
