--- a/site/src/paginas/home/index.html
+++ b/site/src/paginas/home/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="container__quemsomos">
                 <h1>Quem Somos?</h1>
-                <p>Ajudamos a proporcionar um futuro sustentável para o mundo por meio da nossa expertise em ciência dos materiais e da colaboração com parceiros.</p>
+                <p>Somos uma orgnização que visa ajudar o meio ambiente e a proporcionar um futuro sustentável para o mundo por meio da nossa expertise em ciência dos materiais e da colaboração com parceiros.</p>
             </div>
             <div class="container__sustentabilidade">
                 <h1>SUSTENTABILIDADE</h1>
